# 04y29-bot

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
data/: data.db
sql/: create_version_table.sql  insert_version_record.sql
sql/internal/: check_migration_hash.sql  get_current_version.sql
sql/migrations/: 000_schema.sql  001_add_user_roles.sql  002_delete_users.sql
src/: CMakeLists.txt  main.cpp
src/bootstrap/: bootstrap.cpp  bootstrap.hpp
src/clients/: google-sheets-client.cpp  google-sheets-client.hpp
src/db/: migration_manager.cpp  migration_manager.hpp  migrations_list.hpp  queries_manager.cpp  queries_manager.hpp
src/di/: di.hpp
src/env/: env.hpp  env_manager.cpp  env_manager.hpp
src/models/: model.hpp
src/sheets_api/: sheets_viewer.hpp
tests/: CMakeLists.txt  test.cpp
tests/db/: migration_ut.cpp
